# sound-processor

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  test.cpp
src/: Application.cpp  Application.h  ArgsParser.cpp  ArgsParser.h  CmdLineArgs2PipelineConverter.cpp  CmdLineArgs2PipelineConverter.h  FilterDescriptor.h  FilterProducers.h  Pipeline.cpp  Pipeline.h  WAVHeader.h  WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h  Waveform.cpp  Waveform.h  main.cpp
src/filters/: AbstractGeneratorFilter.cpp  AbstractGeneratorFilter.h  AmGen.cpp  AmGen.h  Ampl.cpp  Ampl.h  FmFilter.cpp  FmFilter.h  IFilter.h  Lowpass.cpp  Lowpass.h  Normalize.cpp  Normalize.h  Silence.cpp  Silence.h  Timestretch.cpp  Timestretch.h  sinGen.cpp  sinGen.h
